--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToolBox Home</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        <header>
+        </header>
+
+        <main>
+        </main>
+
+        <footer>
+        </footer>
+    </body>
 </html>
