--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <body>
     <header>
+        <nav>
+            <ul>
+                <li></li>
+            </ul>
+    </nav>
     </header>
 
     <main>
