added a general layout for footer nav

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToolBox Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,9 +15,12 @@
     </main>
 
     <footer>
-        <nav>
+        <nav class="footer-nav">
             <ul>
-                <li></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/memory/">Memory game</a></li>
+                <li><a href="/quiz/">Quiz</a></li>
+                <li><a href="/character/">Character creator</a></li>
             </ul>
         </nav>
     </footer>
