--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <header>
     <nav>
       <ul>
-        <li>
-          
-        </li>
+        <li>Home</li>
+        <li>Quiz Game</li>
+        <li>Memory Game</li>
+        <li>Character Creation</li>
       </ul>
     </nav>
   </header>
