--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <header>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>Quiz Game</li>
-        <li>Memory Game</li>
-        <li>Character Creation</li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/memory/">Memory game</a></li>
+        <li><a href="/quiz/">Quiz</a></li>
+        <li><a href="/character/">Character Creator</a></li>
       </ul>
     </nav>
   </header>
