active status, font fix, hover

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <footer>
       <nav class="footer-nav">
-        <ul>
-          <li><a href="/">Home</a></li>
+        <ul class="lalezar-regular">
+          <li><a href="/" class="active">Home</a></li>
           <li><a href="/memory/">Memory game</a></li>
           <li><a href="/quiz/">Quiz</a></li>
           <li><a href="/character/">Character creator</a></li>
