--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
     </header>
 
     <main>
-        <h1>test</h1>
+        <h1 class="main-text">The Toolbox</h1>
+        <div class="grid-container">
+            <a class="game" href="">
+                <p class="game-text">Quiz Game</p>
+            </a>
+            <a class="game" href="">
+                <p class="game-text">Memory Game</p>
+            </a>
+            <a class="game" href="">
+                <p class="game-text">Character creating</p>
+            </a>
+            <a class="game" href="">
+                <p class="game-text">Random</p>
+            </a>
+        </div>
     </main>
 
     <footer>
