--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
       href="https://fonts.googleapis.com/css2?family=Lalezar&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/CSS/style.css" />
   </head>
 
   <body>
     <header>
+      <div>
+        <a href="/">
+          <div id="logo-container">
+            <div class="logo-text">Tool</div>
+            <div class="logo-text">Box</div>
+          </div>
+        </a>
+      </div>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
