--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
   <body>
     <header>
       <div>
-        <a href="/">
-          <div id="logo-container">
-            <div class="logo-text">Tool</div>
-            <div class="logo-text">Box</div>
-          </div>
-        </a>
+        <div id="logo-container">
+          <a href="/"><div class="logo-text logo-text-tool">Tool</div></a>
+          <a href="/"><div class="logo-text logo-text-box">Box</div></a>
+        </div>
       </div>
       <nav>
         <ul>
