--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         </div>
       </div>
       <nav>
+        <ul class="sidebar">
+          <li><a href="/">Home</a></li>
+          <li><a href="/memory/">Memory game</a></li>
+          <li><a href="/quiz/">Quiz</a></li>
+          <li><a href="/character/">Character Creator</a></li>
+        </ul>
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/memory/">Memory game</a></li>
