header finishing touch

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <ul class="sidebar">
           <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
           <li><a href="/">Home</a></li>
-          <li><a href="/memory/">Memory game</a></li>
-          <li><a href="/quiz/">Quiz</a></li>
+          <li><a href="/memory/">Memory Game</a></li>
+          <li><a href="/quiz/">Quiz Game</a></li>
           <li><a href="/character/">Character Creator</a></li>
         </ul>
         <ul>
           <li class="hideOnMobile"><a href="/">Home</a></li>
-          <li class="hideOnMobile"><a href="/memory/">Memory game</a></li>
-          <li class="hideOnMobile"><a href="/quiz/">Quiz</a></li>
+          <li class="hideOnMobile"><a href="/memory/">Memory Game</a></li>
+          <li class="hideOnMobile"><a href="/quiz/">Quiz Game</a></li>
           <li class="hideOnMobile"><a href="/character/">Character Creator</a></li>
           <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
         </ul>
