fix navigation on main index

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <main>
         <h1 class="main-text">The Toolbox</h1>
         <div class="grid-container">
-            <a class="game" href="">
+            <a class="game" href="/quiz/">
                 <p class="game-text">Quiz Game</p>
             </a>
-            <a class="game" href="">
+            <a class="game" href="/memory/">
                 <p class="game-text">Memory Game</p>
             </a>
-            <a class="game" href="">
+            <a class="game" href="/character/">
                 <p class="game-text">Character creating</p>
             </a>
             <a class="game" href="">
