updated file structure for quiz game

--- a/quiz/quiz-game/hard/index.html
+++ b/quiz/quiz-game/hard/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToolBox Home</title>
+    <title>ToolBox Hard Quiz</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/CSS/style.css" />
     <link rel="stylesheet" type="text/css" href="/CSS/quiz/quiz-style.css" />
+    <script src="/JS/quiz/hard.js" type="module" defer></script>
+    <script src="/JS/quiz/utils.js" type="module" defer></script>
 </head>
 
 <body>
@@ -54,20 +56,20 @@
 
     <main>
         <div class="front-intro-container">
-					<div class="home-image">
-						<img src="/media/quiz/logo-without-text.webp" alt="">
-						<h1 class="lalezar-regular">QuizMaster 2000</h1>
-					</div>
+            <div class="home-image">
+                <img src="/media/quiz/logo-without-text.webp" alt="">
+                <h1 class="lalezar-regular">QuizMaster 2000</h1>
+            </div>
         </div>
-				<div class="quiz-container">
-					<h2>Test your knowledge with a quiz! select from 3 difficulties or leap into a random quiz</h2>
-					<div class="selector">
-						<a href="/quiz/quiz-game/easy/" class="quiz-card easy">Easy</a>
-						<a href="/quiz/quiz-game/medium/" class="quiz-card medium">Medium</a>
-						<a href="/quiz/quiz-game/hard/" class="quiz-card hard">Hard</a>
-						<a href="/quiz/quiz-game/random/" class="quiz-card random">Random</a>
-					</div>
-				</div>
+        <div class="quiz-container">
+            <h2>Test your knowledge with a quiz! select from 3 difficulties or leap into a random quiz</h2>
+            <div class="selector">
+                <a href="#" class="quiz-card easy">Easy</a>
+                <a href="#" class="quiz-card medium">Medium</a>
+                <a href="#" class="quiz-card hard">Hard</a>
+                <a href="#" class="quiz-card random">Random</a>
+            </div>
+        </div>
     </main>
 
     <footer>
