--- a/memory/index.html
+++ b/memory/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/CSS/style.css" />
+    <script src="/JS/memory/utils.js" defer></script>
   </head>
 
   <body>
@@ -43,7 +44,7 @@
     </header>
 
     <main>
-
+      <div id="cardDrawn"></div>
     </main>
 
     <footer>
