update layout quiz html and some css

--- a/quiz/quiz-game/hard/index.html
+++ b/quiz/quiz-game/hard/index.html
@@ -55,21 +55,16 @@
     </header>
 
     <main>
-        <div class="front-intro-container">
-            <div class="home-image">
-                <img src="/media/quiz/logo-without-text.webp" alt="">
-                <h1 class="lalezar-regular">QuizMaster 2000</h1>
+        <section>
+            <h1>Select the correct answer</h1>
+            <div class="progress">
+                <h2>progress</h2>
             </div>
-        </div>
-        <div class="quiz-container">
-            <h2>Test your knowledge with a quiz! select from 3 difficulties or leap into a random quiz</h2>
-            <div class="selector">
-                <a href="#" class="quiz-card easy">Easy</a>
-                <a href="#" class="quiz-card medium">Medium</a>
-                <a href="#" class="quiz-card hard">Hard</a>
-                <a href="#" class="quiz-card random">Random</a>
+            <div class="question-and-answer">
+                <div class="question">Lorem ipsum dolor sit amet.</div>
+                <button class="answer">Lorem, ipsum dolor.</div>
             </div>
-        </div>
+        </section>
     </main>
 
     <footer>
