test memory game finished (https://www.youtube.com/watch?v=bznJPt4t_4s&t=35s)

--- a/memory/index.html
+++ b/memory/index.html
@@ -13,8 +13,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/CSS/style.css" />
+    <link rel="stylesheet" type="text/css" href="/CSS/style.css"/>
+    <link rel="stylesheet" href="/CSS/memory/memory-style.css"/>
     <script src="/JS/memory/utils.js" defer></script>
+    <script src="/JS/memory/main.js" defer></script>
   </head>
 
   <body>
@@ -44,7 +46,7 @@
     </header>
 
     <main>
-      <div id="cardDrawn"></div>
+      <div class="tiles"></div>
     </main>
 
     <footer>
