endret litt i html og css frage og layout

--- a/character/index.html
+++ b/character/index.html
@@ -106,8 +106,8 @@
           </datalist>
           <p>Value: <span id="sliderValue"></span></p>
         </div>
+        <p class="back-text">Choose Your Background</p>
         <div class="background">
-          <p>Background</p>
           <div class="back-class">
             <p class="char-text">Street Urchin:</p>
             <p>
