added progression bar, some CSS and fixed html chars

--- a/quiz/quiz-game/hard/index.html
+++ b/quiz/quiz-game/hard/index.html
@@ -56,10 +56,10 @@
 
     <main>
         <section>
-            <h1>Select the correct answer</h1>
+            <h1 class="lalezar-regular">Select the correct answer</h1>
             <div class="progress">
-                <h2>progress</h2>
             </div>
+            
             <div class="question-and-answer">
                 <div class="question">Lorem ipsum dolor sit amet.</div>
                 <button class="answer">Lorem, ipsum dolor.</div>
