animal icons added

--- a/memory/index.html
+++ b/memory/index.html
@@ -63,6 +63,134 @@
       </div>
     </main>
 
+    <?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 27.5.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 800 800" width="400" height="400">
+  <g>
+    <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#434849;" d="M653.063,294.402"/>
+    <g>
+      <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#D0D1D2;" d="M301.082,354.114c-0.366,0-0.661-0.296-0.661-0.661
+        c0-0.365,0.294-0.661,0.661-0.661"/>
+    </g>
+    <g>
+      <g>
+        <g>
+          <path style="fill:#C7631B;" d="M735.452,400.28c0,2.545-2.063,4.607-4.608,4.607h-50.417c-2.545,0-4.607-2.063-4.607-4.607
+            l0,0c0-2.544,2.063-4.607,4.607-4.607h50.417C733.389,395.674,735.452,397.736,735.452,400.28L735.452,400.28z"/>
+          <g>
+            <path style="fill:#333333;" d="M730.844,395.673c2.545,0,4.608,2.063,4.608,4.606l0,0c0,2.545-2.063,4.608-4.608,4.608"/>
+            <rect x="720.995" y="395.674" style="fill:#333333;" width="3.333" height="9.214"/>
+            <rect x="712.995" y="395.674" style="fill:#333333;" width="3.333" height="9.214"/>
+            <rect x="704.995" y="395.674" style="fill:#333333;" width="3.333" height="9.214"/>
+          </g>
+        </g>
+        <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#C56A27;" d="M705.411,368.502c0,20.565,0,37.465-37.236,37.236h-0.682
+          c-37.236,2.555-37.236-16.67-37.236-37.236v-0.607c0-20.564,16.672-37.235,37.236-37.235h0.682
+          c20.563,0,37.236,16.67,37.236,37.235V368.502z"/>
+      </g>
+      <g>
+        <g>
+          <g>
+            <g>
+              <g>
+                <g>
+                  <path style="fill:#E38032;" d="M704.237,301.117c0,6.528-5.292,11.818-11.817,11.818
+                    c-6.526,0-11.817-5.291-11.817-11.818c0-6.526,5.291-11.816,11.817-11.816
+                    C698.945,289.3,704.237,294.591,704.237,301.117z"/>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path style="fill:#754C24;" d="M699.232,301.117c0,3.763-3.052,6.815-6.813,6.815c-3.764,0-6.813-3.052-6.813-6.815
+                    c0-3.761,3.05-6.813,6.813-6.813C696.181,294.304,699.232,297.355,699.232,301.117z"/>
+                </g>
+              </g>
+            </g>
+          </g>
+          <g>
+            <g>
+              <g>
+                <g>
+                  <path style="fill:#E38032;" d="M653.063,301.117c0,6.528-5.292,11.818-11.817,11.818
+                    c-6.526,0-11.817-5.291-11.817-11.818c0-6.526,5.291-11.816,11.817-11.816
+                    C647.771,289.3,653.063,294.591,653.063,301.117z"/>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <path style="fill:#754C24;" d="M648.059,301.117c0,3.763-3.052,6.815-6.813,6.815c-3.764,0-6.814-3.052-6.814-6.815
+                    c0-3.761,3.05-6.813,6.814-6.813C645.007,294.304,648.059,297.355,648.059,301.117z"/>
+                </g>
+              </g>
+            </g>
+          </g>
+        </g>
+        <g>
+          <defs>
+            <path id="XMLID_1_" d="M630.509,325.468c0-18.68,16.711-33.822,37.325-33.822c20.615,0,37.325,15.142,37.325,33.822
+              c0,18.679-9.247,33.822-37.325,33.822C637.857,359.29,630.509,344.147,630.509,325.468z"/>
+          </defs>
+          <use xlink:href="#XMLID_1_"  style="overflow:visible;fill-rule:evenodd;clip-rule:evenodd;fill:#E38032;"/>
+          <clipPath id="XMLID_00000015344678433894226340000016789177707442370469_">
+            <use xlink:href="#XMLID_1_"  style="overflow:visible;"/>
+          </clipPath>
+        </g>
+        <g>
+          <g>
+            <g>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#333333;" d="M657.57,317.535c0-2.25-1.825-4.074-4.074-4.074
+                c-2.25,0-4.074,1.824-4.074,4.074s1.824,4.074,4.074,4.074C655.745,321.608,657.57,319.785,657.57,317.535z"/>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;" d="M653.667,316.749c0-0.85,0.686-1.541,1.539-1.541
+                c0.853,0,1.538,0.691,1.538,1.541c0,0.851-0.685,1.542-1.538,1.542C654.353,318.29,653.667,317.6,653.667,316.749z"/>
+            </g>
+            <g>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#333333;" d="M687.819,317.535c0-2.25-1.825-4.074-4.074-4.074
+                c-2.25,0-4.074,1.824-4.074,4.074s1.824,4.074,4.074,4.074C685.994,321.608,687.819,319.785,687.819,317.535z"/>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#FFFFFF;" d="M683.916,316.749c0-0.85,0.686-1.541,1.539-1.541
+                c0.852,0,1.538,0.691,1.538,1.541c0,0.851-0.686,1.542-1.538,1.542C684.602,318.29,683.916,317.6,683.916,316.749z"/>
+            </g>
+          </g>
+          <g>
+            <g>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#333333;" d="M631.543,317.535l11.699,6.243l-12.618,5.578
+                C630.624,329.355,630.012,321.021,631.543,317.535z"/>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#333333;" d="M630.921,332.589l18.501-0.954l-13.683,15.16
+                C635.739,346.795,631.973,341.938,630.921,332.589z"/>
+            </g>
+            <g>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#333333;" d="M704.119,317.535l-11.699,6.243l12.618,5.578
+                C705.038,329.355,705.65,321.021,704.119,317.535z"/>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#333333;" d="M704.741,332.589l-18.501-0.954l13.269,14.701
+                C699.509,346.336,703.689,341.938,704.741,332.589z"/>
+            </g>
+          </g>
+          <g>
+            <polygon style="fill-rule:evenodd;clip-rule:evenodd;fill:#F3AB32;" points="662.806,313.461 675.431,313.461 
+              682.056,339.854 656.744,339.854 								"/>
+            <g>
+              <path style="fill-rule:evenodd;clip-rule:evenodd;fill:#333333;" d="M682.056,339.854c0,5.699-5.666,10.319-12.656,10.319
+                c-6.989,0-12.655-4.62-12.655-10.319"/>
+              <g>
+                <path style="fill:#333333;" d="M661.514,357.827c-1.22,0-2.571-0.164-4.052-0.494c-0.269-0.06-0.439-0.327-0.38-0.597
+                  c0.06-0.268,0.326-0.439,0.597-0.38c3.983,0.888,6.909,0.523,8.699-1.082c2.288-2.05,1.935-5.52,1.931-5.555
+                  c-0.03-0.274,0.167-0.522,0.441-0.552c0.283-0.033,0.521,0.166,0.553,0.44c0.019,0.162,0.42,4.005-2.25,6.405
+                  C665.71,357.221,663.854,357.827,661.514,357.827z"/>
+              </g>
+              <g>
+                <path style="fill:#333333;" d="M676.15,357.48c-2.342,0-4.196-0.605-5.539-1.814c-2.67-2.4-2.268-6.243-2.25-6.405
+                  c0.031-0.274,0.267-0.475,0.553-0.44c0.274,0.031,0.472,0.278,0.441,0.552c-0.004,0.035-0.357,3.505,1.931,5.555
+                  c1.788,1.605,4.718,1.969,8.699,1.082c0.271-0.058,0.537,0.111,0.597,0.38c0.06,0.27-0.11,0.537-0.38,0.597
+                  C678.723,357.315,677.37,357.48,676.15,357.48z"/>
+              </g>
+            </g>
+          </g>
+        </g>
+      </g>
+    </g>
+  </g>
+</svg>
+
+
     <footer>
       <nav class="footer-nav">
         <ul class="lalezar-regular">
