--- a/quiz/quiz-game/hard/index.html
+++ b/quiz/quiz-game/hard/index.html
@@ -59,7 +59,8 @@
             <h1 class="lalezar-regular">Select the correct answer</h1>
             <div class="progress">
             </div>
-            
+            <div class="timer"></div>
+
             <div class="question-and-answer">
                 <div class="question">Lorem ipsum dolor sit amet.</div>
                 <button class="answer">Lorem, ipsum dolor.</div>
