--- a/memory/index.html
+++ b/memory/index.html
@@ -54,7 +54,7 @@
       <div class="wrapper">
         <div class="wrapper-content">
           <div class="stats-container">
-            <div id="moves-counter"></div>
+            <div id="moves-count"></div>
             <div id="time"></div>
           </div>
           <div class="game-container"></div>
