--- a/memory/index.html
+++ b/memory/index.html
@@ -58,7 +58,7 @@
             <div id="time"></div>
           </div>
           <div class="game-container"></div>
-          <button id="stop" class="hide">Stop Game</button>
+          <button id="stop" class="hide">Reset</button>
         </div>
       </div>
     </main>
